# Pharmacy_Robot

./: README.md
CAD Files/: Camera.SLDPRT  End Effector.SLDPRT  Prismatic1.SLDPRT  Prismatic2.SLDPRT  Rail.SLDPRT  Revolute Base.SLDPRT  Robot Base.SLDPRT  gripper.SLDPRT  pharmacy_robot.SLDASM
CAD_pharmacy_robot/: bottom_rail.SLDPRT  camera_link.SLDPRT  pharmacy_robot.SLDASM  prismatic_arm.SLDPRT  prismatic_base.SLDPRT  vertical_rail.SLDPRT
install/: setup.bash  setup.sh
pharmacy_robot/: CMakeLists.txt  gripper_base.SLDPRT  package.xml  pharmacy_robot.SLDASM  prismatic_arm.SLDPRT  robot_base.SLDPRT  ~$robot_base.SLDPRT
pharmacy_robot/config/: control.yaml  controllers.yaml  joint_names_pharmacy_robot.yaml
pharmacy_robot/controllers/: pick and place.py  scanner.py  teleop.py
pharmacy_robot/launch/: display.launch  gazebo.launch  gazebo_launch.py
pharmacy_robot/meshes/: base_link.STL  camera_link.STL  gripper_base_link.STL  prismatic_arm_link.STL  prismatic_base_link.STL  robot_base_link.STL  vertical_rail_link.STL
pharmacy_robot/urdf/: pharmacy_gripper.xacro  pharmacy_robot.csv  pharmacy_robot.urdf  pharmacy_robot.urdf.xacro
pharmacy_robot/worlds/: pr_world.world
pkg/pharmacy_robot/: CMakeLists.txt
pkg/robotiq_2f_140_gripper_visualization/: CMakeLists.txt
pkg/robotiq_2f_140_gripper_visualization/launch/: test_2f_140_launch.py
robotiq_2f_140_gripper_visualization/: CMakeLists.txt  package.xml
robotiq_2f_140_gripper_visualization/launch/: gazebo_launch.py
robotiq_2f_140_gripper_visualization/urdf/: robotiq_arg2f_140_model.xacro
(+61 files in other folders)
