<?xml version="1.0"?>
<package format="3">
  <name>robotiq_2f_140_gripper_visualization</name>
  <version>1.0.0</version>
  <description>Robotiq ARG 2-Finger 140mm model C3 description package</description>
  <license>BSD</license>

  <!-- URLs and Maintainers -->
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author email="ryan@rwsinnet.com">Ryan Sinnet</author>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <maintainer email="daniels.ordoez@gmail.com">Daniel Ordonez</maintainer>

  <!-- Build tool dependency for ROS2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>urdf</exec_depend>

  <!-- Export ament package -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

